tests/expected/fake_engine.out
File "/media/ctw04578/data/projects/zen/zen/tests/fake_engine.zen", line 1
  class Player : ScriptComponent {
                                 ^
Error at '{': Parent class not found.
zen: compilation failed.
